--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4.17.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-parallax-tilt": "^1.5.90",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
