--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@trio-website/api-interfaces": ["libs/api-interfaces/src/index.ts"],
-      "@trio-website/components": ["libs/components/src/index.ts"]
+      "@trio-website/flyer": ["libs/flyer/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
